[2단계 - 블랙잭(배팅)] 쿤(홍동건) 미션 제출합니다. (#357)
* refactor : Card 캐싱하는 작업 Card 클래스로 위임

Card 생성자를 private으로 막아주어서, 외부에서 새로운 Card 객체 생성을 막아주었다.
valueOf()와 values()를 사용하여 해당하는 카드와 카드 리스트를 가져와서 사용하게 했다

* refactor : 메서드명 변경

* refactor : 접근제어자 변경

* feat : 비어 있는 리스트를 반환하는 정적 메서드 추가

비어있는 new ArrayList()를 계속 만드는 것보다 싱글턴 패턴을 활용해 메모리 효율을 좋게할 수 있다

* docs: README 블랙잭 2단계 기능 요구사항 추가

* docs : readme 수정

돈이 0인 경우도 예외 발생

* feat: 베팅 금액을 관리하는 클래스 추가

음수나 0원을 입력할 경우 예외를 발생한다.

* feat : 사용자 베팅 금액 입력 문구 추가

* feat : 사용자들 베팅하기 추가

* feat : 블랙잭 기능 추가

처음 받은 카드 2장의 합이 21인 경우에, 블랙잭
사용자는 블랙잭인 경우 hit를 할 수 없다

* feat : Result 멤버 변수 추가 및 Result의 Draw -> PUSH 로 이름 변환

* refactor : 블랙잭과 버스트 제외하고 결과 비교하는 역할 Result에 위임

* docs: readme 수정

* refactor : 딜러가 블랙잭이고 플레이어가 블랙잭 아닌경우 패배 조건 추가

* feat : 결과에 따른 수익 계산 기능 추가

* feat : 딜러 수익 계산 기능 추가

* feat : 참여자들 수익 결과 출력 추가

* README : README 수정

* docs: README 수정

* refactor : 매직넘버 상수화

* refactor : unmodifiableList에서 copyOf로 변경

* refactor : 메서드 수정 및 테스트코드 추가

unmodifiableList를 copyOf로 변경
isBust에 대한 테스트코드 추가

* refactor : Participant hit 메서드 추상메서드로 변경 및 메서드명 수정

Dealer와 Player의 hit할 수 있는 조건이 다르기 때문에, hit 할 수 없는 상황에서 hit하려고 할 때 다른 예외문을 보여주기 위해 분리함

* test : 딜러가 카드를 잘 뽑는지 확인하는 테스트 코드 추가

* refactor : 메서드 수정 및 불필요한 상수 제거, receiveResult 테스트코드 수정

* refactor : Player의 Money 필드 생성자에서 초기화, final 키워드 추가

이전에 betMoney()는 setter() 느낌이 강하기도하고, 외부에서 변할 수 있으므로 final 키워드르 붙이고 생성자에서 초기화 해준다.

* refactor : Money 생성자 private 변경 및 정적 팩토리 메서드 추가

* feat : 베팅 입력 메서드 변경

* rename : Money -> BettingMoney로 이름 변경

* docs : README 기능 요구사항 체크

* test : Player가 hit을 정상적으로 하는지 테스트 추가

* refactor : unmdofiableList에서 copyOf로 변경

* refactor : Cards의 addCard(), addCards() 메서드 시그니처 변경

* style : 자바 키워드 순서 컨벤션에 맞게 순서 변경:

* refactor : 상수 접근지정자 변경 public -> private

* docs : Readme 기능 요구사항 수정

* refactor: CACHE에 카드 저장 메서드 분리

* refactor : Card 저장할 캐시 Map으로 구현

* refactor : getEmptyList의 반환형 Cards로 