@@ -8,8 +8,10 @@ public final class Cards {
 
     private static final int ACE_ADDITION = 10;
     private static final int MAX_SCORE = 21;
+    private static final int CARD_COUNT_FOR_BLACKJACK = 2;
+    private static final List<Card> EMPTY_LIST = Collections.emptyList();
 
-    public final List<Card> cards;
+    private final List<Card> cards;
 
     private Cards(List<Card> initialCards) {
         cards = new ArrayList<>(initialCards);
@@ -19,58 +21,51 @@ public final class Cards {
         return new Cards(cards);
     }
 
+    public static Cards getEmptyCardsPack() {
+        return new Cards(EMPTY_LIST);
+    }
+
     public int calculateScore() {
-        int aceAmount = countAceAmount();
-        if (aceAmount != 0) {
-            return judgeAdvantageResult(aceAmount);
+        int score = calculateSum();
+
+        if (isContainAce()) {
+            return calculateScoreWithAce(score);
         }
-        return calculateSum();
-    }
-
-    private int countAceAmount() {
-        return (int) cards.stream()
-                .filter(Card::isAceCard)
-                .count();
-    }
-
-    private int judgeAdvantageResult(int aceAmount) {
-        List<Integer> sumOfCases = new ArrayList<>();
-        for (int aceCount = 1; aceCount <= aceAmount; aceCount++) {
-            sumOfCases.add(sumAceAddition(calculateSum(), aceCount));
-        }
-
-        return sumOfCases.stream()
-                .mapToInt(x -> x)
-                .max()
-                .orElse(calculateSum());
-    }
-
-    private int sumAceAddition(int sum, int aceCount) {
-        int sumWithElevenAce = sum + aceCount * ACE_ADDITION;
-        if (sumWithElevenAce > MAX_SCORE) {
-            return sum;
-        }
-        return sumWithElevenAce;
+        return score;
     }
 
     public int calculateSum() {
         return cards.stream()
-                .mapToInt(Card::getScore)
-                .sum();
+            .mapToInt(Card::getScore)
+            .sum();
+    }
+
+    private boolean isContainAce() {
+        return cards.stream()
+            .anyMatch(Card::isAceCard);
+    }
+
+    private int calculateScoreWithAce(int score) {
+        if (score + ACE_ADDITION <= MAX_SCORE) {
+            return score + ACE_ADDITION;
+        }
+        return score;
+    }
+
+    public boolean isBlackJack() {
+        return cards.size() == CARD_COUNT_FOR_BLACKJACK && calculateScore() == MAX_SCORE;
     }
 
     public boolean isBust() {
         return calculateScore() > MAX_SCORE;
     }
 
-    public Cards addCard(Card card) {
+    public void addCard(Card card) {
         cards.add(card);
-        return new Cards(cards);
     }
 
-    public Cards addCards(List<Card> cards) {
+    public void addCards(List<Card> cards) {
         this.cards.addAll(cards);
-        return new Cards(this.cards);
     }
 
     public Card getCardByIndex(int index) {
@@ -78,6 +73,6 @@ public final class Cards {
     }
 
     public List<Card> getCards() {
-        return Collections.unmodifiableList(cards);
+        return List.copyOf(cards);
     }
 }
