@@ -1,6 +1,5 @@
 package domain.card;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedList;
@@ -8,27 +7,19 @@ import java.util.List;
 
 public final class Deck {
 
-    private final static List<Card> CACHE = new ArrayList<>();
-
     private final LinkedList<Card> cards;
 
     private Deck(LinkedList<Card> cards) {
         this.cards = new LinkedList<>(cards);
     }
 
-    static {
-        Arrays.stream(Symbol.values())
-            .forEach(symbol -> Arrays.stream(Denomination.values())
-                .forEach(denomination -> CACHE.add(new Card(symbol, denomination))));
-    }
-
-    public static Deck initDeck() {
-        LinkedList<Card> cards = new LinkedList<>(CACHE);
+    public static Deck initDeck(List<Card> cache) {
+        LinkedList<Card> cards = new LinkedList<>(cache);
         Collections.shuffle(cards);
         return new Deck(cards);
     }
 
-    public List<Card> handOutCards() {
+    public List<Card> handOutInitialTwoCards() {
         return Arrays.asList(handOut(), handOut());
     }
 
@@ -37,6 +28,6 @@ public final class Deck {
     }
 
     public List<Card> getCards() {
-        return Collections.unmodifiableList(cards);
+        return List.copyOf(cards);
     }
 }
